@@ -1,3 +1,8 @@
+2010-08-28  KUBO Takehiro  <kubo@jiubao.org>
+	* ext/oci8/env.c, ext/oci8/error.c, ext/oci8/extconf.rb, ext/oci8/oci8.c,
+	  ext/oci8/oci8.h, oci8/oci8lib.c, ext/oci8/ocinumber.c: fix for rubinius.
+	    Note that this is not enough to compile ruby-oci8 on it.
+
 2010-08-23  KUBO Takehiro  <kubo@jiubao.org>
 	* lib/oci8/object.rb: fix an error when SDO_GEOMETRY is used
 	    and $VERBOSE is set.
